Add width-dependent line breaks in title

--- a/pages/new-home.html
+++ b/pages/new-home.html
@@ -11,8 +11,8 @@ layout: no-style-2
 	<section class="home__page-1">
 		<div class="home-1__content-wrapper">
 			<div class="home-1__text-wrapper">
-				<h1 class="home-1__page-title"><span>Katherine Donnally</span></h1>
-				<h2 class="home-1__subtitle"><span>Designer & Ecosocialist</span></h2>
+				<h1 class="home-1__page-title">Katherine<span><br/></span> Donnally</h1>
+				<h2 class="home-1__subtitle">Designer &<span><br/></span>Ecosocialist</h2>
 			</div>
 		</div>
 	</section>
