--- a/pages/new-home.html
+++ b/pages/new-home.html
@@ -35,8 +35,14 @@ layout: no-style-2
 			</section>
 			<section class="home-blog__politics">
 				<h3 class="home-blog__politics-title"><a href="#">Politics</a></h3>
-				<h4 class="home-blog__politics-subhed">Commentary & Analysis</h4>
+				<h4 class="home-blog__politics-subhed">Commentary & Analysis<br/><br/><br/></h4>
 			</section>
+		</article>
+
+		<article class="home-2__intake">
+			<div class="home-intake__title-wrapper">
+				<h2 class="home-intake__title"><a href="{{ '/intake' | relative_url}}">Intake</a></h2>
+			</div>
 		</article>
 	</section>
 
