Finish version 1 of new homepage!

--- a/pages/new-home.html
+++ b/pages/new-home.html
@@ -21,13 +21,14 @@ layout: no-style-2
 		<!-- portfolio -->
 		<article class="home-2__portfolio">
 			<h2 class="home-portfolio__title"><a href="{{ '/portfolio' | relative_url}}">Portfolio</a></h2>
-			<h3 class="home-portfolio__subtitle">View all projects</h3>
+			<h4 class="home-portfolio__subhed">A smattering of projects & experiments to explore.</h4>
 		</article>
-
+		
 		<!-- blog -->
 		<article class="home-2__blog">
 			<div class="home-blog__title-wrapper">
 				<h2 class="home-blog__title"><a href="{{ '/blog' | relative_url}}">Blog</a></h2>
+				<h4 class="home-blog__subhed">See below for more specific topics.</h4>
 			</div>
 			<section class="home-blog__tech">
 				<h3 class="home-blog__tech-title"><a href="#">Tech</a></h3>
@@ -42,6 +43,7 @@ layout: no-style-2
 		<article class="home-2__intake">
 			<div class="home-intake__title-wrapper">
 				<h2 class="home-intake__title"><a href="{{ '/intake' | relative_url}}">Intake</a></h2>
+				<h4 class="home-blog__intake-subhed">Need a web designer? Hire me!</h4>
 			</div>
 		</article>
 	</section>
@@ -63,7 +65,7 @@ layout: no-style-2
 			</article>
 		</section>
 	</section>
-	
+
 </main>
 
 {% include new-footer.html %}
