--- a/pages/real/blog.html
+++ b/pages/real/blog.html
@@ -26,7 +26,7 @@ order: 4
 		</h4>
 		<section class="blog-post__read-more">
 			<div class="post-read__excerpt">
-				{{ post.excerpt | truncatewords: 35 }}
+				{{ post.excerpt | strip_html | truncatewords: 35 }}
 			</div>
 			
 			<a class="post-read__more" href="{{ post.url }}">Read More >></a>
