Update font sizes and fonts available

--- a/pages/new-home.html
+++ b/pages/new-home.html
@@ -36,7 +36,7 @@ layout: no-style-2
 			</section>
 			<section class="home-blog__politics">
 				<h3 class="home-blog__politics-title"><a href="#">Politics</a></h3>
-				<h4 class="home-blog__politics-subhed">Commentary & Analysis<br/><br/><br/></h4>
+				<h4 class="home-blog__politics-subhed">Commentary & Analysis<br/><br/><span><br/></span></h4>
 			</section>
 		</article>
 
