--- a/pages/real/new-portfolio.html
+++ b/pages/real/new-portfolio.html
@@ -40,7 +40,7 @@ order: 1
 				<h4 class="portfolio-meta__role">{{ project.full-role }}</h4>
 				<h4 class="portfolio-meta__note">// Click images to enlarge.</h4>
 			</section>
-			
+
 			<!-- project pics -->
 			<ul class="portfolio-proj__pics">
 				{% for proj in images %} <!-- look at all image objects -->
@@ -74,5 +74,11 @@ order: 1
 			<div class="portfolio-divider__line--left"></div>
 		</section>
 		{% endfor %}
+	</article>
+
+	<!-- experiments -->
+	<article class="portfolio__experiments">
+		<h2 class="portfolio-experiments__title">Experiments</h2>
+		<p>A place to play, that is empty right now.</p>
 	</article>
 </main>
