--- a/pages/dropdown.html
+++ b/pages/dropdown.html
@@ -3,3 +3,14 @@ title: Dropdown Menu
 layout: no-style-2
 permalink: /dropdown/
 ---
+
+<ul class="menu-total-wrapper">
+	<li class="menu-item"><a href="#">Home Icon</a></li>
+	<li class="menu-item"><a href="#">Hamburger Icon</a>
+		<ul class="menu__dropdown-wrapper">
+			<li><a href="#">About</a></li>
+			<li><a href="#">Blog</a></li>
+			<li><a href="#">Portfolio</a></li>
+		</ul>
+	</li>
+</ul>
