--- a/pages/dropdown.html
+++ b/pages/dropdown.html
@@ -4,7 +4,7 @@ layout: no-style-2
 permalink: /dropdown/
 ---
 
-<ul class="menu-total-wrapper">
+<!--ul class="menu-total-wrapper">
 	<li class="menu-item"><a href="#">Home Icon</a></li>
 	<li class="menu-item"><a href="#">Hamburger Icon</a>
 		<ul class="menu__dropdown-wrapper">
@@ -13,4 +13,16 @@ permalink: /dropdown/
 			<li><a href="#">Portfolio</a></li>
 		</ul>
 	</li>
+</ul-->
+
+<ul>
+	<li><a href="#">One</a></li>
+	<li><a href="#">Two</a>
+		<ul class="dropdown">
+			<li><a href="#">Sub-1</a></li>
+ 			<li><a href="#">Sub-2</a></li>
+  			<li><a href="#">Sub-3</a></li>
+  		</ul>
+	</li>
+	<!--li><a href="#">Three</a></li-->
 </ul>
