Working dropdown menu!!!

--- a/pages/dropdown.html
+++ b/pages/dropdown.html
@@ -17,7 +17,7 @@ permalink: /dropdown/
 
 <ul>
 	<li><a href="#">One</a></li>
-	<li><a href="#">Two</a>
+	<li class="dropdown-wrapper"><a href="#">Two</a>
 		<ul class="dropdown">
 			<li><a href="#">Sub-1</a></li>
  			<li><a href="#">Sub-2</a></li>
