Get dropdown menu working!!

--- a/pages/dropdown.html
+++ b/pages/dropdown.html
@@ -16,12 +16,12 @@ permalink: /dropdown/
 </ul-->
 
 <ul>
-	<li><a href="#">One</a></li>
-	<li class="dropdown-wrapper"><a href="#">Two</a>
+	<li class="dropdown-home"><a href="#">{% include logo-lavender.svg %}</a></li>
+	<li class="dropdown-wrapper"><a href="#">{% include hamburger-menu-blocky.svg %}</a>
 		<ul class="dropdown">
-			<li><a href="#">Sub-1</a></li>
- 			<li><a href="#">Sub-2</a></li>
-  			<li><a href="#">Sub-3</a></li>
+			<li><a href="#">About</a></li>
+ 			<li><a href="#">Blog</a></li>
+  			<li><a href="#">Portfolio</a></li>
   		</ul>
 	</li>
 	<!--li><a href="#">Three</a></li-->
