Get SCSS linter installed

--- a/pages/dropdown.html
+++ b/pages/dropdown.html
@@ -26,3 +26,11 @@ permalink: /dropdown/
 	</li>
 	<!--li><a href="#">Three</a></li-->
 </ul>
+
+Goals for tomorrow:
+
+- Switch this menu over to the other, without losing the 'hover color' and size implemented currently in the menu area
+- Look over site menu
+- Add site menu to footer
+- Start writing a blog post
+- New favicon using logo
