--- a/pages/new-home.html
+++ b/pages/new-home.html
@@ -4,7 +4,7 @@ permalink: /new-home/
 layout: no-style-2
 ---
 
-{% include extra-new-menu.html %}
+{% include dropdown-menu.html %}
 
 <main class="home">
 	
