Add down arrow on front page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@ layout: new-default
 				<h1 class="home-1__page-title">Katherine<span><br/></span> Donnally</h1>
 				<h2 class="home-1__subtitle">Designer &<span><br/></span> Ecosocialist</h2>
 			</div>
+
+			<section class="home-1__arrow">
+				{% include down-arrow-black.svg %}
+			</section>
 		</div>
+		
 	</section>
 
 	<section class="home__page-2">
