change subtitle on homepage

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: new-default
 		<div class="home-1__content-wrapper">
 			<div class="home-1__text-wrapper">
 				<h1 class="home-1__page-title">Katherine<span><br/></span> Donnally</h1>
-				<h2 class="home-1__subtitle">Designer &<span><br/></span> Ecosocialist</h2>
+				<h2 class="home-1__subtitle">Web Designer in<span><br/></span> Richmond, VA</h2>
 			</div>
 
 			<section class="home-1__arrow">
