Add and style buttons for filtering by tech/politics on blog

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -13,6 +13,11 @@ order: 4
 	<div class="blog-title__line--left"></div>
 </section>
 
+<section class="blog__categories">
+	<button class="blog-cats__tech">Technology</button>
+	<button class="blog-cats__politics">Politics</button>
+</section>
+
 <main class="blog__post-list">
 	{% for post in site.posts %}
 	<article class="blog-posts__post">
