Add wrapper to blog for JS selection

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -6,6 +6,8 @@ menu: true
 order: 4
 ---
 
+<main class="blog-wrapper">
+
 <section class="blog__title">
 	<h1 class="blog-title__text">Blog</h1>
 	<div class="blog-title__line--left"></div>
@@ -38,4 +40,5 @@ order: 4
 		</section>
 	</article>
 	{% endfor %}
+</main>
 </main>
