Add 'show all' button on blog

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -18,6 +18,7 @@ order: 4
 <section class="blog__categories">
 	<button class="blog-cats__tech">Technology</button>
 	<button class="blog-cats__politics">Politics</button>
+	<button class="blog-cats__all">Show All</button>
 </section>
 
 <main class="blog__post-list">
