Add IDs to buttons & manipulate CSS using the URL -> click through to specific topics in blog!

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -16,8 +16,8 @@ order: 4
 </section>
 
 <section class="blog__categories">
-	<button class="blog-cats__tech">Technology</button>
-	<button class="blog-cats__politics">Politics</button>
+	<button class="blog-cats__tech" id="blog-tech">Technology</button>
+	<button class="blog-cats__politics" id="blog-politics">Politics</button>
 	<button class="blog-cats__all">Show All</button>
 </section>
 
