--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@ layout: new-default
 				<h4 class="home-blog__subhed">See below for more specific topics.</h4>
 			</div>
 			<section class="home-blog__tech">
-				<h3 class="home-blog__tech-title"><a href="#">Tech</a></h3>
+				<h3 class="home-blog__tech-title"><a href="{{ '/blog/#blog-tech' | relative_url}}">Tech</a></h3>
 				<h4 class="home-blog__tech-subhed">Fun with CSS, JavaScript, HTML, & Python</h4>
 			</section>
 			<section class="home-blog__politics">
-				<h3 class="home-blog__politics-title"><a href="#">Politics</a></h3>
+				<h3 class="home-blog__politics-title"><a href="{{ '/blog/#blog-politics' | relative_url}}">Politics</a></h3>
 				<h4 class="home-blog__politics-subhed">Commentary & Analysis<br/><br/><span><br/></span></h4>
 			</section>
 		</article>
